--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
       content="Delivo je dostava u Novom Sadu za hranu, namirnice i sve što vam je potrebno – sve na jednom mestu."
     />
 
+    <!-- OVO ISPOD SKINUTI OBAVEZNO KAD SE SKINE MAINT. OVERLAY -->
+    <meta name="robots" content="noindex, nofollow" />
+
     <link rel="canonical" href="https://delivo.rs/" />
 
     <meta property="og:title" content="Delivo | Dostava Novi Sad – Sve na jednom mestu" />
